# comic-manage

./: index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/scraper/: mock.rs  mod.rs
src/layouts/: MainLayout.vue
src/pages/: DashboardPage.vue  LibraryPage.vue  MatchPage.vue  ScanPage.vue  SettingsPage.vue
src/router/: index.ts
src/stores/: library.ts
src/types/: models.ts
